--- a/hackuniversitydonate.html
+++ b/hackuniversitydonate.html
@@ -471,22 +471,173 @@
               <tr>
                 <th>Month</th>
                 <th>Hackathon</th>
+                <th>Theme</th>
+                <th>Description</th>
                 <th>Format</th>
+                <th>Duration</th>
               </tr>
             </thead>
             <tbody>
-              <tr><td>Jan</td><td>305 Winter Mini-Hack</td><td>Virtual / Hybrid / In-Person — 2 Hack sessions</td></tr>
-              <tr><td>Feb</td><td>305 Startup Hacks</td><td>Virtual / Hybrid / In-Person — 2 Hack sessions</td></tr>
-              <tr><td>Mar</td><td>HackFiesta Miami</td><td>Virtual / Hybrid / In-Person — 2 Hack sessions</td></tr>
-              <tr><td>Apr</td><td>305 Hackathon — Spring Edition</td><td>Virtual / Hybrid / In-Person — 2 Hack sessions</td></tr>
-              <tr><td>May</td><td>CodeStorm</td><td>Virtual / Hybrid / In-Person — 2 Hack sessions</td></tr>
-              <tr><td>Jun</td><td>305 Build-A-Bot Hack</td><td>Virtual / Hybrid / In-Person — 2 Hack sessions</td></tr>
-              <tr><td>Jul</td><td>SummerCodeX</td><td>Virtual / Hybrid / In-Person — 2 Hack sessions</td></tr>
-              <tr><td>Aug</td><td>305 Campus Reboot Hack</td><td>Virtual / Hybrid / In-Person — 2 Hack sessions</td></tr>
-              <tr><td>Sep</td><td>305 Hackathon — Fall</td><td>Virtual / Hybrid / In-Person — 2 Hack sessions</td></tr>
-              <tr><td>Oct</td><td>EmpowHER Hackathon</td><td>Virtual / Hybrid / In-Person — 2 Hack sessions</td></tr>
-              <tr><td>Nov</td><td>305 Veterans & DefenseTech Hack</td><td>Virtual / Hybrid / In-Person — 2 Hack sessions</td></tr>
-              <tr><td>Dec</td><td>CodeFest</td><td>Virtual / Hybrid / In-Person — 2 Hack sessions</td></tr>
+              <!-- January - First row -->
+              <tr>
+                <td rowspan="2">Jan</td>
+                <td rowspan="2">305 Hackathon Edition January [Healthcare & AI Edition]</td>
+                <td rowspan="2">AI in Healthcare & Biotech</td>
+                <td rowspan="2">Students create innovative diagnostic tools, digital health platforms, and assistive tech that merge healthcare and AI.</td>
+                <td>Session A <br> Online/Synchronous</td>
+                <td>1068 Hrs Hacking</td>
+              </tr>
+              <!-- January - Second row -->
+              <tr>
+                <td>Session B <br> In-Person</td>
+                <td>12 Hrs Hacking</td>
+              </tr>
+
+              <!-- February - First row -->
+              <tr>
+                <td rowspan="2">Feb</td>
+                <td rowspan="2">305 Hackathon Edition February [Engineering & Robotics Edition]</td>
+                <td rowspan="2">Mechanical, Electrical & Hardware Innovation</td>
+                <td rowspan="2">Students build next-gen IoT systems, robotics, and hardware-software integrations for smarter engineering.</td>
+                <td>Session A <br> Online/Synchronous</td>
+                <td>1068 Hrs Hacking</td>
+              </tr>
+              <!-- February - Second row -->
+              <tr>
+                <td>Session B <br> In-Person</td>
+                <td>12 Hrs Hacking</td>
+              </tr>
+
+              <!-- March - First row -->
+              <tr>
+                <td rowspan="2">Mar</td>
+                <td rowspan="2">Hack Fiesta Miami [Startup & AI Innovation Edition]</td>
+                <td rowspan="2">AI Startups & Venture Innovation</td>
+                <td rowspan="2">Students launch AI-powered startups with real business potential, from concept to investor-ready pitch.</td>
+                <td>Session A <br> Online/Synchronous</td>
+                <td>1068 Hrs Hacking</td>
+              </tr>
+              <!-- March - Second row -->
+              <tr>
+                <td>Session B <br> In-Person</td>
+                <td>12 Hrs Hacking</td>
+              </tr>
+
+              <!-- April - First row -->
+              <tr>
+                <td rowspan="2">Apr</td>
+                <td rowspan="2">305 Hackathon Edition April [Cyber Law & Compliance Edition]</td>
+                <td rowspan="2">Law, Compliance, & Cybersecurity</td>
+                <td rowspan="2">Students design secure, ethical, and compliant digital systems addressing privacy, legal tech, and cyber risk.</td>
+                <td>Session A <br> Online/Synchronous</td>
+                <td>1068 Hrs Hacking</td>
+              </tr>
+              <!-- April - Second row -->
+              <tr>
+                <td>Session B <br> In-Person</td>
+                <td>12 Hrs Hacking</td>
+              </tr>
+
+              <!-- May - Single row -->
+              <tr>
+                <td>May</td>
+                <td>CodeStorm 2026 [Marketing & Creative AI Edition]</td>
+                <td>Marketing, Media, & Creative AI</td>
+                <td>Students reinvent branding, analytics, and digital storytelling using data-driven and generative AI tools.</td>
+                <td>Session A <br> Online/Synchronous</td>
+                <td>1068 Hrs Hacking</td>
+              </tr>
+
+              <!-- June - Single row -->
+              <tr>
+                <td>Jun</td>
+                <td>305 Hackathon Edition June [Automation & Bot Edition]</td>
+                <td>Automation & Productivity Tools</td>
+                <td>Students build intelligent bots, workflow automation tools, and assistants that enhance efficiency.</td>
+                <td>Session A <br> Online/Synchronous</td>
+                <td>1068 Hrs Hacking</td>
+              </tr>
+
+              <!-- July - Single row -->
+              <tr>
+                <td>Jul</td>
+                <td>SummerCodeX [Finance & FinTech Edition]</td>
+                <td>Finance, FinTech & Data Science</td>
+                <td>Students create data-driven platforms that modernize finance, trading, and financial decision-making.</td>
+                <td>Session A <br> Online/Synchronous</td>
+                <td>1068 Hrs Hacking</td>
+              </tr>
+
+              <!-- August - Single row -->
+              <tr>
+                <td>Aug</td>
+                <td>305 Hackathon Edition August [Campus Reboot Edition]</td>
+                <td>EdTech & Student Experience</td>
+                <td>Students redefine learning, student engagement, and campus innovation through technology.</td>
+                <td>Session A <br> Online/Synchronous</td>
+                <td>1068 Hrs Hacking</td>
+              </tr>
+
+              <!-- September - First row -->
+              <tr>
+                <td rowspan="2">Sep</td>
+                <td rowspan="2">305 Hackathon Edition September [Fall Edition]</td>
+                <td rowspan="2">CivicTech & Sustainability</td>
+                <td rowspan="2">Students tackle challenges in climate, energy, and infrastructure for resilient, sustainable cities.</td>
+                <td>Session A <br> Online/Synchronous</td>
+                <td>1068 Hrs Hacking</td>
+              </tr>
+              <!-- September - Second row -->
+              <tr>
+                <td>Session B <br> In-Person</td>
+                <td>12 Hrs Hacking</td>
+              </tr>
+
+              <!-- October - First row -->
+              <tr>
+                <td rowspan="2">Oct</td>
+                <td rowspan="2">EmpowHER Hackathon [Leadership & Accessibility Edition]</td>
+                <td rowspan="2">Leadership & Accessibility</td>
+                <td rowspan="2">Students empower accessibility through leadership-driven innovation.</td>
+                <td>Session A <br> Online/Synchronous</td>
+                <td>1068 Hrs Hacking</td>
+              </tr>
+              <!-- October - Second row -->
+              <tr>
+                <td>Session B <br> In-Person</td>
+                <td>12 Hrs Hacking</td>
+              </tr>
+
+              <!-- November - First row -->
+              <tr>
+                <td rowspan="2">Nov</td>
+                <td rowspan="2">305 Veterans & DefenseTech Hack [Veterans Edition]</td>
+                <td rowspan="2">Veterans & DefenseTech</td>
+                <td rowspan="2">Students build solutions for national defense, veteran support, and community resilience.</td>
+                <td>Session A <br> Online/Synchronous</td>
+                <td>1068 Hrs Hacking</td>
+              </tr>
+              <!-- November - Second row -->
+              <tr>
+                <td>Session B <br> In-Person</td>
+                <td>12 Hrs Hacking</td>
+              </tr>
+
+              <!-- December - First row -->
+              <tr>
+                <td rowspan="2">Dec</td>
+                <td rowspan="2">CodeFest [End-of-Year Innovation Edition]</td>
+                <td rowspan="2">End-of-Year Innovation for Business, Marketing, Finance & AI </td>
+                <td rowspan="2">Students conclude the year by merging business insight and AI strategy to solve real-world corporate challenges.</td>
+                <td>Session A <br> Online/Synchronous</td>
+                <td>1068 Hrs Hacking</td>
+              </tr>
+              <!-- December - Second row -->
+              <tr>
+                <td>Session B <br> In-Person</td>
+                <td>12 Hrs Hacking</td>
+              </tr>
+
             </tbody>
           </table>
         </div>
