--- a/hackuniversity.html
+++ b/hackuniversity.html
@@ -344,6 +344,9 @@
             <h3 class="mt-4 text-xl font-extrabold">Google Developer Club</h3>
             <p class="subtitle text-sm mt-1">at Florida International University</p>
           </a>
+          <p>
+            <br>Google Developer Group focused on building community and sharing knowledge around Google technologies and software development. Open Worldwide | All Universities | All Majors | High School Students (16+)
+          </p>
           <div class="divider"></div>
           <nav class="grid grid-cols-3 gap-2">
             <a class="btn btn-ghost" href="https://www.linkedin.com/showcase/hack-university-global/" target="_blank"><i class="fab fa-linkedin"></i></a>
@@ -372,6 +375,10 @@
             <h3 class="mt-4 text-xl font-extrabold">Code Crunch Worldwide</h3>
             <p class="subtitle text-sm mt-1">Global coding community</p>
           </a>
+            <p>
+            <br>An interdisciplinary tech club dedicated to coding, technical interview prep, and hackathons. Open Worldwide | All Universities | All Majors | High School Students (16+)
+
+          </p>
           <div class="divider"></div>
           <nav class="grid grid-cols-3 gap-2">
             <a class="btn btn-ghost" href="https://www.linkedin.com/showcase/hack-university-global/" target="_blank"><i class="fab fa-linkedin"></i></a>
@@ -400,6 +407,10 @@
             <h3 class="mt-4 text-xl font-extrabold">ColorStack</h3>
             <p class="subtitle text-sm mt-1">at Florida International University</p>
           </a>
+            <p>
+            <br>Part of a national network of 120+ chapters, focused on mentorship, community, and career pathways for underrepresented students in tech. Open Worldwide | All Universities | All Majors | High School Students (16+)
+
+          </p>
           <div class="divider"></div>
           <nav class="grid grid-cols-3 gap-2">
             <a class="btn btn-ghost" href="https://www.linkedin.com/showcase/hack-university-global/" target="_blank"><i class="fab fa-linkedin"></i></a>
@@ -428,6 +439,10 @@
             <h3 class="mt-4 text-xl font-extrabold">CAHSI</h3>
             <p class="subtitle text-sm mt-1">at Florida International University</p>
           </a>
+                      <p>
+            <br>Part of the Computing Alliance of Hispanic-Serving Institutions (CAHSI) network across 60+ universities, expanding access to computing research and tech careers. Open Worldwide | All Universities | All Majors | High School Students (16+)
+
+          </p>
           <div class="divider"></div>
           <nav class="grid grid-cols-3 gap-2">
             <a class="btn btn-ghost" href="https://www.linkedin.com/showcase/hack-university-global/" target="_blank"><i class="fab fa-linkedin"></i></a>
@@ -456,6 +471,10 @@
             <h3 class="mt-4 text-xl font-extrabold">Raspberry Pi</h3>
             <p class="subtitle text-sm mt-1">Code Crunch Community</p>
           </a>
+                                <p>
+            <br>A hands-on, project-based club and learning platform featuring structured learning paths, video tutorials, certificates, and resources in coding, AI, and electronics. Open Worldwide | All Universities | All Majors | High School Students (13+)
+
+          </p>
           <div class="divider"></div>
           <nav class="grid grid-cols-3 gap-2">
             <a class="btn btn-ghost" href="https://www.linkedin.com/showcase/hack-university-global/" target="_blank"><i class="fab fa-linkedin"></i></a>
