--- a/HACK-6.1-305HACKNOV-1.html
+++ b/HACK-6.1-305HACKNOV-1.html
@@ -67,6 +67,29 @@
       .hack-university-footer-grid { grid-template-columns: 1fr; gap: 1rem; }
       .hack-university-social-grid { grid-template-columns: repeat(2,1fr); }
     }
+
+    .arrow-link {
+  color: #1a73e8;
+  text-decoration: none;
+  position: relative;
+  font-weight: 500;
+}
+
+.arrow-link i {
+  margin-left: 6px;
+  font-size: 0.85em;
+  transition: transform 0.3s ease, color 0.3s ease;
+  transform: rotate(45deg);
+  color: #1a73e8;
+}
+
+.arrow-link:hover i {
+  transform: rotate(45deg) translate(3px, -3px);
+  color: #1557b0;
+}
+
+
+
   </style>
 </head>
 <body>
@@ -156,30 +179,58 @@
   <section class="section wrap">
     <div class="grid">
 <div class="card">
-          <h2>Registration Steps</h2>
-          <ol class="list">
-            <li>1. RSVP on <strong><a href="https://bevy.com/events/hackuniversity" target="_blank" rel="noopener noreferrer">Bevy Calendar event ticket →</a></strong> for the online session.</li>
-            <li>2. Register on the <strong><a href="https://hackuniversity-onestopform.vercel.app/" target="_blank" rel="noopener noreferrer">OneStopForm →</a></strong> for tools/perks access.</li>
-            <li>3. Register on <strong><a href="https://hackuniversity.devpost.com/" target="_blank" rel="noopener noreferrer">Devpost →</a></strong> for submissions.</li>
-            <li>4. Join the <strong><a href="https://discord.gg/codecrunch" target="_blank" rel="noopener noreferrer">Code Crunch Discord →</a></strong> and check mentorship channels & schedules.</li>
-            <li>5. Read the <strong><a href="https://hackuniversity-hackathons.vercel.app/hackerguide.html" target="_blank" rel="noopener noreferrer">Hacker Guide & Toolkit →</a></strong>.</li>
-            <li>6. Read the <strong><a href="https://hackuniversity-hackathons.vercel.app/agenda.html" target="_blank" rel="noopener noreferrer">Event Agenda →</a></strong>.</li>
-            <li>7. Create your <strong><a href="https://github.com/new" target="_blank" rel="noopener noreferrer">GitHub repo →</a></strong> and make your first commit.</li>
-            <li>8. Submit final links before <strong>Nov 15</strong> deadline.</li>
-          </ol>
-        </div>
+  <h2>Registration Steps</h2>
+  <ol class="list">
+    <li>
+      RSVP on <strong><a href="https://bevy.com/events/hackuniversity" target="_blank" rel="noopener noreferrer" class="arrow-link">Bevy Event Ticket <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong>
+    </li>
+    <li>
+      Register on <strong><a href="https://hackuniversity-onestopform.vercel.app/" target="_blank" rel="noopener noreferrer" class="arrow-link">OneStopForm <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong> for tools/perks
+    </li>
+    <li>
+      Register on <strong><a href="https://hackuniversity.devpost.com/" target="_blank" rel="noopener noreferrer" class="arrow-link">Devpost <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong> for submissions
+    </li>
+    <li>
+      Join <strong><a href="https://discord.gg/codecrunch" target="_blank" rel="noopener noreferrer" class="arrow-link">Code Crunch Discord <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong> (check mentorship channels & schedules)
+    </li>
+    <li>
+      Read <strong><a href="https://hackuniversity-hackathons.vercel.app/hackerguide.html" target="_blank" rel="noopener noreferrer" class="arrow-link">Hacker Guide &amp; Toolkit <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong>
+    </li>
+    <li>
+      Read <strong><a href="https://hackuniversity-hackathons.vercel.app/agenda.html" target="_blank" rel="noopener noreferrer" class="arrow-link">Event Agenda <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong>
+    </li>
+    <li>
+      Create your <strong><a href="https://github.com/new" target="_blank" rel="noopener noreferrer" class="arrow-link">GitHub repo <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong> and make your first commit
+    </li>
+    <li>
+      Submit final links by <strong>Nov 15</strong>
+    </li>
+  </ol>
+</div>
 
-        <div class="card">
-          <h2>Check-in Steps</h2>
-          <ol class="list">
-            <li>1. Complete the <strong><a href="https://hackuniversity-checkin.vercel.app/" target="_blank" rel="noopener noreferrer">Check-in Form →</a></strong>.</li>
-            <li>2. Add team members on <strong><a href="https://hackuniversity.devpost.com/" target="_blank" rel="noopener noreferrer">Devpost →</a></strong> (Edits allowed before submission deadline).</li>
-            <li>3. Create your <strong><a href="https://github.com/new" target="_blank" rel="noopener noreferrer">PUBLIC GitHub repo →</a></strong> and make your first commit.</li>
-            <li>4. Check mentorship channels & schedules on <strong><a href="https://discord.gg/codecrunch" target="_blank" rel="noopener noreferrer">Discord →</a></strong>.</li>
-            <li>5. Attend hackathon workshops (see <strong><a href="https://hackuniversity-hackathons.vercel.app/agenda.html" target="_blank" rel="noopener noreferrer">agenda →</a></strong> for details).</li>
-            <li>6. Submit your project before the deadline (see <strong><a href="https://hackuniversity-hackathons.vercel.app/agenda.html" target="_blank" rel="noopener noreferrer">agenda →</a></strong>).</li>
-          </ol>
-        </div>
+<div class="card">
+  <h2>Check-in Steps</h2>
+  <ol class="list">
+    <li>
+      Complete the <strong><a href="https://hackuniversity-checkin.vercel.app/" target="_blank" rel="noopener noreferrer" class="arrow-link">Check-in Form <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong>
+    </li>
+    <li>
+      Add team members on <strong><a href="https://hackuniversity.devpost.com/" target="_blank" rel="noopener noreferrer" class="arrow-link">Devpost <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong> (edits allowed before deadline)
+    </li>
+    <li>
+      Create a <strong><a href="https://github.com/new" target="_blank" rel="noopener noreferrer" class="arrow-link">PUBLIC GitHub repo <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong> and make your first commit
+    </li>
+    <li>
+      Check mentorship channels & schedules on <strong><a href="https://discord.gg/codecrunch" target="_blank" rel="noopener noreferrer" class="arrow-link">Discord <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong>
+    </li>
+    <li>
+      Attend workshops (see <strong><a href="https://hackuniversity-hackathons.vercel.app/agenda.html" target="_blank" rel="noopener noreferrer" class="arrow-link">agenda <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong>)
+    </li>
+    <li>
+      Submit your project (see <strong><a href="https://hackuniversity-hackathons.vercel.app/agenda.html" target="_blank" rel="noopener noreferrer" class="arrow-link">agenda <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong>)
+    </li>
+  </ol>
+</div>
 
 
 
