--- a/HACK-6.1-305HACKNOV-1.html
+++ b/HACK-6.1-305HACKNOV-1.html
@@ -129,8 +129,8 @@
         <strong>Live demos are required</strong>; no live demo = <strong>0 points</strong>. RSVP on <strong>Bevy</strong> for automatic email updates.
       </div>
       <div class="row" style="margin-top:12px;">
-        <a class="btn" href="#" target="_blank" rel="noopener"><i class="fa-solid fa-door-open"></i> Join Opening Ceremony</a>
-        <a class="btn alt" href="#" target="_blank" rel="noopener"><i class="fa-solid fa-flag-checkered"></i> Join Closing Ceremony</a>
+        <a class="btn" href="https://hackuniversity-zoom.vercel.app/" target="_blank" rel="noopener"><i class="fa-solid fa-door-open"></i> Join Opening Ceremony</a>
+        <a class="btn alt" href="https://hackuniversity-zoom.vercel.app/" target="_blank" rel="noopener"><i class="fa-solid fa-flag-checkered"></i> Join Closing Ceremony</a>
         <!-- <a class="btn alt" href="#" target="_blank" rel="noopener"><i class="fa-solid fa-circle-play"></i> Join Online Session</a> -->
       </div>
     </div>
@@ -151,7 +151,7 @@
           <li>Submission window and live demos (Nov 15)</li>
         </ul>
         <div class="row" style="margin-top:10px">
-          <a class="btn" href="#" target="_blank" rel="noopener">Register (OneStopForm)</a>
+          <a class="btn" href="http://hackuniversity-registration.vercel.app/" target="_blank" rel="noopener">Register (OneStopForm)</a>
           <!-- <a class="btn alt" href="#" target="_blank" rel="noopener">RSVP on Bevy</a>
           <a class="btn alt" href="#" target="_blank" rel="noopener">Participant Perks (APIs &amp; Subs)</a> -->
         </div>
@@ -182,22 +182,22 @@
   <h2>Registration Steps</h2>
   <ol class="list">
     <li>
-      RSVP on <strong><a href="https://bevy.com/events/hackuniversity" target="_blank" rel="noopener noreferrer" class="arrow-link">Bevy Event Ticket <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong>
+      RSVP on <strong><a href="https://gdg.community.dev/e/mnx2w6/" target="_blank" rel="noopener noreferrer" class="arrow-link">Bevy Event Ticket <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong>
     </li>
     <li>
-      Register on <strong><a href="https://hackuniversity-onestopform.vercel.app/" target="_blank" rel="noopener noreferrer" class="arrow-link">OneStopForm <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong> for tools/perks
+      Register on <strong><a href="http://hackuniversity-registration.vercel.app/" target="_blank" rel="noopener noreferrer" class="arrow-link">OneStopForm <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong> for tools/perks
     </li>
     <li>
-      Register on <strong><a href="https://hackuniversity.devpost.com/" target="_blank" rel="noopener noreferrer" class="arrow-link">Devpost <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong> for submissions
+      Register on <strong><a href="https://305hacknov2025sa.devpost.com/" target="_blank" rel="noopener noreferrer" class="arrow-link">Devpost <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong> for submissions
     </li>
     <li>
-      Join <strong><a href="https://discord.gg/codecrunch" target="_blank" rel="noopener noreferrer" class="arrow-link">Code Crunch Discord <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong> (check mentorship channels & schedules)
+      Join <strong><a href="http://hackuniversity-registration.vercel.app/" target="_blank" rel="noopener noreferrer" class="arrow-link">Code Crunch Discord <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong> (check mentorship channels & schedules)
     </li>
     <li>
       Read <strong><a href="https://hackuniversity-hackathons.vercel.app/hackerguide.html" target="_blank" rel="noopener noreferrer" class="arrow-link">Hacker Guide &amp; Toolkit <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong>
     </li>
     <li>
-      Read <strong><a href="https://hackuniversity-hackathons.vercel.app/agenda.html" target="_blank" rel="noopener noreferrer" class="arrow-link">Event Agenda <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong>
+      Read <strong><a href="https://www.notion.so/305-Hack-Nov-25-Session-A-Online-Synchronous-Agenda-29d7c6d4a1d0801ca102cd26f9fb41cb?source=copy_link" target="_blank" rel="noopener noreferrer" class="arrow-link">Event Agenda <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong>
     </li>
     <li>
       Create your <strong><a href="https://github.com/new" target="_blank" rel="noopener noreferrer" class="arrow-link">GitHub repo <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong> and make your first commit
@@ -212,22 +212,25 @@
   <h2>Check-in Steps</h2>
   <ol class="list">
     <li>
-      Complete the <strong><a href="https://hackuniversity-checkin.vercel.app/" target="_blank" rel="noopener noreferrer" class="arrow-link">Check-in Form <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong>
+      Complete the <strong><a href="https://docs.google.com/forms/d/e/1FAIpQLScI6FtLI59QtWqzngkwa0ja4IOszrYdFLdPmOYmG-Ltb-dpJA/viewform?usp=dialog" target="_blank" rel="noopener noreferrer" class="arrow-link">Check-in Form <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong>
     </li>
     <li>
-      Add team members on <strong><a href="https://hackuniversity.devpost.com/" target="_blank" rel="noopener noreferrer" class="arrow-link">Devpost <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong> (edits allowed before deadline)
+      Add team members on <strong><a href="https://305hacknov2025sa.devpost.com/" target="_blank" rel="noopener noreferrer" class="arrow-link">Devpost <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong> (edits allowed before deadline)
     </li>
     <li>
       Create a <strong><a href="https://github.com/new" target="_blank" rel="noopener noreferrer" class="arrow-link">PUBLIC GitHub repo <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong> and make your first commit
     </li>
     <li>
-      Check mentorship channels & schedules on <strong><a href="https://discord.gg/codecrunch" target="_blank" rel="noopener noreferrer" class="arrow-link">Discord <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong>
+      Check mentorship channels & schedules on <strong><a href="http://hackuniversity-registration.vercel.app/" target="_blank" rel="noopener noreferrer" class="arrow-link">Discord <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong>
     </li>
     <li>
-      Attend workshops (see <strong><a href="https://hackuniversity-hackathons.vercel.app/agenda.html" target="_blank" rel="noopener noreferrer" class="arrow-link">agenda <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong>)
+      Attend workshops (see <strong><a href="https://www.notion.so/305-Hack-Nov-25-Session-A-Online-Synchronous-Agenda-29d7c6d4a1d0801ca102cd26f9fb41cb?source=copy_link" target="_blank" rel="noopener noreferrer" class="arrow-link">agenda <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong>)
     </li>
     <li>
-      Submit your project (see <strong><a href="https://hackuniversity-hackathons.vercel.app/agenda.html" target="_blank" rel="noopener noreferrer" class="arrow-link">agenda <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong>)
+      Submit your project (see <strong><a href="https://www.notion.so/305-Hack-Nov-25-Session-A-Online-Synchronous-Agenda-29d7c6d4a1d0801ca102cd26f9fb41cb?source=copy_link" target="_blank" rel="noopener noreferrer" class="arrow-link">agenda <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong>)
+    </li>
+        <li>
+      See Lives Demos Presentation order (see <strong><a href="http://empowherhackdayfall25-projects.vercel.app/">List <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong>)
     </li>
   </ol>
 </div>
