--- a/HACK-6.1-305HACKNOV-1.html
+++ b/HACK-6.1-305HACKNOV-1.html
@@ -229,8 +229,8 @@
     <li>
       Submit your project (see <strong><a href="https://www.notion.so/305-Hack-Nov-25-Session-A-Online-Synchronous-Agenda-29d7c6d4a1d0801ca102cd26f9fb41cb?source=copy_link" target="_blank" rel="noopener noreferrer" class="arrow-link">agenda <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong>)
     </li>
-        <li>
-      See Lives Demos Presentation order (see <strong><a href="http://empowherhackdayfall25-projects.vercel.app/">List <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong>)
+    <li>
+      See Lives Demos Presentation order (see <strong><a href="https://docs.google.com/spreadsheets/d/12XawEQd-wbwozsYDKwPMr8Uj3yJcgdBinVPxudjWX_w/edit?usp=sharing">List <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong>)
     </li>
   </ol>
 </div>
