--- a/HACK-6.1-305HACKNOV-1.html
+++ b/HACK-6.1-305HACKNOV-1.html
@@ -194,7 +194,7 @@
       Join <strong><a href="http://hackuniversity-registration.vercel.app/" target="_blank" rel="noopener noreferrer" class="arrow-link">Code Crunch Discord <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong> (check mentorship channels & schedules)
     </li>
     <li>
-      Read <strong><a href="https://hackuniversity-hackathons.vercel.app/hackerguide.html" target="_blank" rel="noopener noreferrer" class="arrow-link">Hacker Guide &amp; Toolkit <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong>
+      Read <strong><a href="https://hackuniversity-hackerguide.vercel.app" target="_blank" rel="noopener noreferrer" class="arrow-link">Hacker Guide &amp; Toolkit <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong>
     </li>
     <li>
       Read <strong><a href="https://www.notion.so/305-Hack-Nov-25-Session-A-Online-Synchronous-Agenda-29d7c6d4a1d0801ca102cd26f9fb41cb?source=copy_link" target="_blank" rel="noopener noreferrer" class="arrow-link">Event Agenda <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong>
