--- a/HACK-6.1-305HACKNOV-1.html
+++ b/HACK-6.1-305HACKNOV-1.html
@@ -249,10 +249,10 @@
           <li>Devpost (submissions)</li>
         </ul>
         <div class="row" style="margin-top:10px">
-          <a class="btn alt" href="#" target="_blank" rel="noopener">Agenda</a>
-          <a class="btn" href="#" target="_blank" rel="noopener">Hacker Guide</a>
-          <a class="btn alt" href="#" target="_blank" rel="noopener">Devpost</a>
-          <a class="btn" href="#" target="_blank" rel="noopener">Subscriptions/APIs/Perks</a>
+          <a class="btn alt" href="https://www.notion.so/305-Hack-Nov-25-Session-A-Online-Synchronous-Agenda-29d7c6d4a1d0801ca102cd26f9fb41cb?source=copy_link" target="_blank" rel="noopener">Agenda</a>
+          <a class="btn" href="https://hackuniversity-hackerguide.vercel.app" target="_blank" rel="noopener">Hacker Guide</a>
+          <a class="btn alt" href="https://305hacknov2025sa.devpost.com/" target="_blank" rel="noopener">Devpost</a>
+          <a class="btn" href="https://sites.google.com/view/hackuniversitysubscriptions/home" target="_blank" rel="noopener">Subscriptions/APIs/Perks</a>
         </div>
       </div>
     </div>
