--- a/HACK-6.1-305HACKNOV-1.html
+++ b/HACK-6.1-305HACKNOV-1.html
@@ -264,11 +264,11 @@
       <p class="meta">Criteria: Technical Difficulty · Functionality · Innovation & Creativity · Design & User Experience · Impact & Usefulness · Presentation & Demo</p>
       <div style="margin-top:6px;display:grid;gap:10px">
         <div class="card" style="border-style:dashed">
-          <strong>General Build</strong>
+          <strong>General Build [Track # 1]</strong>
           <p>Prototype/simulation with README, short video, and a live link or screenshots.</p>
         </div>
         <div class="card" style="border-style:dashed">
-          <strong>Tech Unicorn (Pitch)</strong>
+          <strong>Tech Unicorn (Pitch) [Track # 2]</strong>
           <p>No-code pitch: deck + 2-min video + exec summary. Emphasize problem insight and GTM.</p>
         </div>
       </div>
