--- a/HACK-6.1-305HACKNOV-1.html
+++ b/HACK-6.1-305HACKNOV-1.html
@@ -97,7 +97,7 @@
 <header class="site-nav">
   <div class="wrap" style="display:flex;justify-content:space-between;align-items:center;">
     <div class="brand"><i class="fa-solid fa-wifi"></i> Session A — Online Hybrid/Remote</div>
-    <nav><a class="btn alt" href="index.html">← All Sessions</a></nav>
+    <nav><a class="btn alt" href="https://305hacknov2025.vercel.app/">← All Sessions</a></nav>
   </div>
 </header>
 
@@ -107,7 +107,11 @@
     <p class="text-xs sm:text-sm text-gray-500 mb-2">
       <a href="https://hackuniversity.vercel.app" class="underline hover:no-underline">Hack University</a>
       <span aria-hidden="true"> / </span>
-      305 Veterans &amp; DefenseTech Hack
+            <a href="https://hackuniversity-hackathons.vercel.app" class="underline hover:no-underline">Hackathons</a>
+      <span aria-hidden="true"> / </span>
+            <a href="https://305hacknov2025.vercel.app/" class="underline hover:no-underline">305 Hackathon Edition Nov 2025</a>
+      <span aria-hidden="true"> / </span>
+      Session A | 305 Veterans &amp; DefenseTech Hack
     </p>
     <h1 class="text-3xl sm:text-4xl font-extrabold tracking-tight text-gray-900">
       Session A — Online Hybrid/Remote
