--- a/HACK-6.1-305HACKNOV-1.html
+++ b/HACK-6.1-305HACKNOV-1.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width,initial-scale=1"/>
-  <title>Session A — Online Hybrid/Remote · 305 Veterans & DefenseTech Hack</title>
-  <meta name="description" content="Online Hybrid/Remote session for the 305 Veterans & DefenseTech Hack. Runs Nov 7–15 with mentors, checkpoints, and workshops."/>
+  <title>Session A — Online/Synchronous · 305 Veterans & DefenseTech Hack</title>
+  <meta name="description" content="Online/Synchronous session for the 305 Veterans & DefenseTech Hack. Runs Nov 7–15 with mentors, checkpoints, and workshops."/>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"/>
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
@@ -96,7 +96,7 @@
 <!-- small sticky nav -->
 <header class="site-nav">
   <div class="wrap" style="display:flex;justify-content:space-between;align-items:center;">
-    <div class="brand"><i class="fa-solid fa-wifi"></i> Session A — Online Hybrid/Remote</div>
+    <div class="brand"><i class="fa-solid fa-wifi"></i> Session A — Online/Synchronous</div>
     <nav><a class="btn alt" href="https://305hacknov2025.vercel.app/">← All Sessions</a></nav>
   </div>
 </header>
@@ -114,10 +114,10 @@
       Session A | 305 Veterans &amp; DefenseTech Hack
     </p>
     <h1 class="text-3xl sm:text-4xl font-extrabold tracking-tight text-gray-900">
-      Session A — Online Hybrid/Remote
+      Session A — Online/Synchronous
     </h1>
     <p class="mt-2 text-gray-600 max-w-2xl">
-      Dates: <strong>Fri, Nov 7 → Sat, Nov 15, 2025</strong> (ET). Challenge prompt drops at the closing ceremony. Live demos are required (0 points without).
+      Dates: <strong>Fri, Nov 7 → Sat, Nov 15, 2025</strong> (ET).
     </p>
   </div>
 </header>
@@ -129,8 +129,8 @@
       <p>Kickoff Nov 7 and keep building through Nov 15 with mentor hours, checkpoints, and async support.</p>
       <p class="meta" style="margin-top:6px;"><strong>Timeline:</strong> Continuous build window across Nov 7–15 (ET)</p>
       <div class="notice">
-        <strong>Heads up:</strong> The <em>Build</em> challenge prompt is revealed at the <strong>closing ceremony (ET)</strong>. 
-        <strong>Live demos are required</strong>; no live demo = <strong>0 points</strong>. RSVP on <strong>Bevy</strong> for automatic email updates.
+        <strong>Heads up:</strong> The <em>Build</em> challenge prompt is revealed at the <strong>opening ceremony (ET)</strong>.
+        <strong>Live demos presentations are required</strong>; no live demo presentations = <strong>0 points</strong>. RSVP on <strong>Bevy</strong> for automatic email updates.
       </div>
       <div class="row" style="margin-top:12px;">
         <a class="btn" href="https://hackuniversity-zoom.vercel.app/" target="_blank" rel="noopener"><i class="fa-solid fa-door-open"></i> Join Opening Ceremony</a>
@@ -147,7 +147,7 @@
         <div class="meta" style="margin:6px 0 8px">
           <span><i class="fa-regular fa-calendar"></i> Nov 7–15 (ET)</span>
           <span><i class="fa-regular fa-clock"></i> Continuous build</span>
-          <span><i class="fa-solid fa-globe"></i> Remote / Hybrid</span>
+          <span><i class="fa-solid fa-globe"></i> Online/Synchronous</span>
         </div>
         <ul class="list">
           <li>Kickoff stream + team formation (Nov 7)</li>
