--- a/HACK-6.1-305HACKNOV-1.html
+++ b/HACK-6.1-305HACKNOV-1.html
@@ -96,7 +96,7 @@
 <!-- small sticky nav -->
 <header class="site-nav">
   <div class="wrap" style="display:flex;justify-content:space-between;align-items:center;">
-    <div class="brand"><i class="fa-solid fa-wifi"></i> Session A — Online/Synchronous</div>
+    <div class="brand"><i class="fa-solid fa-wifi"></i> 305 Hackathon Edition Nov 2025 - Session A — Online/Synchronous</div>
     <nav><a class="btn alt" href="https://305hacknov2025.vercel.app/">← All Sessions</a></nav>
   </div>
 </header>
