--- a/HACK-6.1-305HACKNOV-0.html
+++ b/HACK-6.1-305HACKNOV-0.html
@@ -124,9 +124,10 @@
     <div class="grid">
       <!-- Online -->
       <article class="card">
-        <h2>Session A — Online Hybrid/Remote</h2>
+        <h2>Session A — Online/Synchronous</h2>
         <div class="meta">
           <span><i class="fa-regular fa-calendar"></i> Fri, Nov 7 → Sat, Nov 15</span>
+          <span><i class="fa-regular fa-clock"></i> 10:00 PM – 11:00 PM ET</span>
           <span><i class="fa-solid fa-wifi"></i> Remote-friendly</span>
         </div>
         <p>Kickoff Nov 7 and keep building through Nov 15 with mentor hours, checkpoints, and async support.</p>
@@ -144,8 +145,8 @@
         <h2>Session B — Fully In-Person</h2>
         <div class="meta">
           <span><i class="fa-regular fa-calendar"></i> Sat, Nov 15</span>
-          <span><i class="fa-regular fa-clock"></i> 9:00 AM – 9:00 PM ET</span>
-          <span><i class="fa-solid fa-location-dot"></i> On-Campus</span>
+          <span><i class="fa-regular fa-clock"></i> 10:00 AM – 11:00 PM ET</span>
+          <span><i class="fa-solid fa-location-dot"></i> On-FIU Campus</span>
         </div>
         <p>One-day onsite sprint with workshops, mentors, judging, and demos.</p>
         <div class="row">
