--- a/HACK-6.1-305HACKNOV-0.html
+++ b/HACK-6.1-305HACKNOV-0.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>305 Veterans & DefenseTech Hack — November</title>
-  <meta name="description" content="305 Veterans & DefenseTech Hack — Online Hybrid/Remote (Nov 7–15) and Fully In-Person (Nov 15, 10 AM–10 PM ET)."/>
+  <meta name="description" content="305 Veterans & DefenseTech Hack — Online Online/Synchronous (Nov 7–15) and Fully In-Person (Nov 15, 10 AM–10 PM ET)."/>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"/>
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
@@ -103,7 +103,7 @@
       305 Hackathon | Edition November 2025 — Two Sessions
     </h1>
     <p class="mt-2 text-gray-600 max-w-2xl">
-      Online Hybrid/Remote: <strong>Nov 7–15</strong> · In-Person: <strong>Nov 15</strong> (10 AM–10 PM ET). RSVP on Bevy for email updates. Live demos required.
+      Online Online/Synchronous: <strong>Nov 7–15</strong> · In-Person: <strong>Nov 15</strong> (10 AM–10 PM ET). RSVP on Bevy for email updates. Live demos required.
     </p>
   </div>
 </header>
