--- a/HACK-6.1-305HACKNOV-0.html
+++ b/HACK-6.1-305HACKNOV-0.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>305 Veterans & DefenseTech Hack — November</title>
-  <meta name="description" content="305 Veterans & DefenseTech Hack — Online Online/Synchronous (Nov 7–15) and Fully In-Person (Nov 15, 10 AM–10 PM ET)."/>
+  <title>305 Hackathon | Edition November 2025 | Veterans & DefenseTech Hack</title>
+  <meta name="description" content="305 Hackathon | Edition November 2025 | Veterans & DefenseTech Hack — Online Online/Synchronous (Nov 7–15) and Fully In-Person (Nov 15, 10 AM–10 PM ET)."/>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"/>
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
@@ -86,7 +86,7 @@
 <!-- small sticky nav -->
 <header class="site-nav">
   <div class="wrap" style="display:flex;justify-content:space-between;align-items:center;">
-    <div class="brand"><i class="fa-solid fa-shield"></i> 305 Veterans & DefenseTech Hack</div>
+    <div class="brand"><i class="fa-solid fa-shield"></i> 305 Hackathon | Edition November 2025 | Veterans & DefenseTech Hack</div>
     <nav><a class="btn alt" href="#sessions">Sessions</a></nav>
   </div>
 </header>
