--- a/HACK-6.1-305HACKNOV-0.html
+++ b/HACK-6.1-305HACKNOV-0.html
@@ -103,7 +103,7 @@
       305 Hackathon | Edition November 2025 — Two Sessions
     </h1>
     <p class="mt-2 text-gray-600 max-w-2xl">
-      Online Online/Synchronous: <strong>Nov 7–15</strong> · In-Person: <strong>Nov 15</strong> (10 AM–10 PM ET). RSVP on Bevy for email updates. Live demos required.
+      Online Online/Synchronous: <strong>Nov 7–15</strong> · In-Person: <strong>Nov 15</strong> (10 AM–10 PM ET).
     </p>
   </div>
 </header>
